# SmartCalculator-v2.0

./: README.md  main.cpp  structures.h  type_predicates.h
code-samples/: consoleView.h
controller/: controller.cpp  controller.h
model/: credit.cpp  deposit.cpp  model.h  smart.cpp  stack.cpp
src/: CMakeLists.txt  Makefile  README.md  main.cpp
src/Backend/: model.cpp  model.h  stack.cpp
src/controller/: controller.cpp  controller.h
src/model/: credit.cpp  deposit.cpp  model.h  smart.cpp  stack.cpp
src/tests/: test_core.cpp  test_core.h  test_creditcalc.cpp  test_depositcalc.cpp  test_smartcalc.cpp
src/view/: UImanager.cpp  creditview.cpp  creditview.h  creditview.ui  depositview.cpp  depositview.h  depositview.ui  smartview.cpp  smartview.h  view.cpp  view.h  view.ui
src/view/.ui/: creditview.ui  depositview.ui  ui_depositview.h  ui_smartview.h  ui_view.h  view.ui
tests/: test_core.h  test_creditcalc.cpp  test_depositcalc.cpp  test_smartcalc.cpp
view/: UImanager.cpp  creditview.h  smartview.h  view.cpp  view.h  view.ui
view/.ui/: smartview.ui  ui_creditview.h
